--- a/charts/trino/templates/service-worker.yaml
+++ b/charts/trino/templates/service-worker.yaml
@@ -12,8 +12,8 @@ metadata:
 spec:
   clusterIP: None
   ports:
-    - port: {{ .Values.server.config.https.port }}
-      targetPort: {{ .Values.server.config.https.port }}
+    - port: 8443
+      targetPort: 8443
       protocol: TCP
       name: https
     {{- if $workerJmx.exporter.enabled }}
