--- a/charts/trino/deployment-worker.yaml
+++ b/charts/trino/deployment-worker.yaml
@@ -1,7 +1,7 @@
 {{- $workerJmx := merge .Values.jmx.worker (omit .Values.jmx "coordinator" "worker") -}}
 {{- if or .Values.server.keda.enabled (gt (int .Values.server.workers) 0) }}
 apiVersion: apps/v1
-kind: StatefulSet  # Thay đổi từ Deployment sang StatefulSet
+kind: Deployment
 metadata:
   name: {{ template "trino.worker" . }}
   namespace: {{ .Release.Namespace }}
@@ -15,17 +15,13 @@ metadata:
   annotations:
     {{- toYaml .Values.worker.deployment.annotations | nindent 4 }}
 spec:
-  serviceName: {{ template "trino.worker" . }}  # Thêm serviceName - bắt buộc cho StatefulSet
+  progressDeadlineSeconds: {{ .Values.worker.deployment.progressDeadlineSeconds }}
+  revisionHistoryLimit: {{ .Values.worker.deployment.revisionHistoryLimit }}
+  strategy:
+    {{- toYaml .Values.worker.deployment.strategy | nindent 4 }}
   {{- if and (not .Values.server.autoscaling.enabled) (not .Values.server.keda.enabled) }}
   replicas: {{ .Values.server.workers }}
   {{- end }}
-  podManagementPolicy: Parallel  # Tùy chọn: thêm podManagementPolicy (Parallel hoặc OrderedReady)
-  updateStrategy:  # Thay đổi strategy sang updateStrategy
-    type: RollingUpdate
-    rollingUpdate:
-      {{- if .Values.worker.updateStrategy }}
-      {{- toYaml .Values.worker.updateStrategy | nindent 6 }}
-      {{- end }}
   selector:
     matchLabels:
       {{- include "trino.selectorLabels" . | nindent 6 }}
@@ -280,13 +276,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-  # Thêm volumeClaimTemplates nếu cần PersistentVolume
-  # volumeClaimTemplates:
-  # - metadata:
-  #     name: data
-  #   spec:
-  #     accessModes: [ "ReadWriteOnce" ]
-  #     resources:
-  #       requests:
-  #         storage: 1Gi
 {{- end }}
