--- a/charts/trino/templates/configmap-worker.yaml
+++ b/charts/trino/templates/configmap-worker.yaml
@@ -13,7 +13,7 @@ data:
     node.environment={{ tpl .Values.server.node.environment . }}
     node.data-dir={{ .Values.server.node.dataDir }}
     plugin.dir={{ .Values.server.node.pluginDir }}
-    node.id={{ template "trino.worker" . }}
+    # node.id={{ template "trino.worker" . }}
     node.internal-address-source=FQDN
   {{- range $configValue := .Values.additionalNodeProperties }}
     {{ $configValue }}
