--- a/charts/trino/templates/configmap-coordinator.yaml
+++ b/charts/trino/templates/configmap-coordinator.yaml
@@ -61,9 +61,10 @@ data:
     # {{- if .Values.coordinator.config.memory.heapHeadroomPerNode }}
     # memory.heap-headroom-per-node={{ .Values.coordinator.config.memory.heapHeadroomPerNode }}
     # {{- end }}
-    discovery.uri=https://localhost:{{ .Values.server.config.https.port }}
+    discovery.uri=https://trino-coordinator:{{ .Values.server.config.https.port }}
     #discovery.uri=http://localhost:{{ .Values.service.port }}
     # {{- if .Values.server.config.authenticationType }}
+    discovery-server.enabled=true
     http-server.process-forwarded=true
     http-server.authentication.type={{ .Values.server.config.authenticationType }}
     password-authenticator.config-files={{ .Values.server.config.path }}password-authenticator.properties
